--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body{
   font-family: 'Shadows Into Light', cursive;
 }
 
+.heading {
+  margin-top: 10px; 
+  text-align: left;
+}
 
 .navbar{
   
@@ -20,22 +24,20 @@ body{
  width: 80px;
 }
 
-.heading {
-  margin-top: 10px; 
-  text-align: left;
-}
+
 
 .carousel{
   padding-top: 100px;
   padding-bottom: 40px;
+  width: 100%;
   
 }
 .polaroid {
-  height: 200px;
+  height: auto;
   background-color: #fff;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px 10px 30px 10px;
-  width: auto;
+  width: 300px;
   margin: 8px;
   display: inline-block;
   vertical-align: top;
